### To do list: ###

* rendre les icones de batterie et signal clickable pour avoir la valeur exact.

  
### To fix list: ###

* nothing.


### December 27 2021, Release version 0.8.2 ###

  * MODIFIED:
    * improved timestamp for data coming from mqtt server.

  * ADDED:
    * logging messages have been added for MqttToDbThread.


### December 26 2021, Release version 0.8.1 ###

  * FIXED:
    * logging wasn't imported in the gui_functions.py file.


### December 26 2021, Release version 0.8.0 ###

  * MODIFIED:
    * changed string format implying variables.
    * change matplotlib logging level to warning.
    * added a function to correct icon and font path for the compiled linux version.
    * changed path coding in utils.py for all functions.
    * changed the way icon are displayed in set_ts_stack_icon function.
    * modified set_ts_stack_icon and set_fc_stack_icon functions for better performance.
    * modified displayed date for better performance.
    * modified display of in and out temperature, humidity and pressure.
    * improved the use of pathlib.Path in mainwindow.
    * added a function to correct icon in the connexion window.
    * icons path and stylesheet have been improved in both forecast windows, in the update window, in the weather
    warning window, in the option window, in the aboutlog window.
    * the time series plotting function has been moved in a QThread.
    * ID has been removed from the database.
    * collecting thread has been split into different threads : one thread per captor.
    * displaying thread has been split into different thread : one thread for inside and outside.
    * pressure and msl pressure have been separated in both exterior and interior frames.
    * modified option window to separate in and out sensor/display options.
    * each thread has now each own db connexion.
    * improved time series generation from database.
    * MyWait window has been removed.

  * ADDED: